# ModpackSyncTool

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: build.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/background/: mod.rs  poller.rs  tray.rs
src-tauri/src/commands/: mod.rs  publish.rs  sync.rs
src-tauri/src/core/: apply.rs  diff.rs  manifest.rs  mod.rs  mods_folder.rs  zip.rs
src-tauri/src/db/: mod.rs
src-tauri/src/github/: auth.rs  client.rs  index.rs  mod.rs
src/lib/: Icon.svelte  Onboarding.svelte
src/routes/: +page.svelte
